CM-2.12: Всратый пост сервис готов
